# Fileworker

./: CMakeLists.txt  README.md  fileworker.cpp  fileworker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
